[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pricing-library"
version = "0.1.0"
description = "Educational master pricing library for rates and equity derivatives."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Neeraj" }]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["pricing_library*"]

